# context-bridge

./: .gitignore  CHANGELOG.md  DECISIONS.md  LICENSE  README.md  SPRINT_NOTES.md  install.sh  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
context_bridge/: cli.py  hook.py  main.py  memory.py  models.py  planner.py  skill.md
docs/: architecture.md  manual-sync.md
server/: config.py  dashboard.html  hook.py  main.py  memory.py  models.py  planner.py  skill.md
skill/: CLAUDE.md
tests/: conftest.py  test_api.py  test_checkpoint_types.py  test_diff.py  test_export.py  test_planner.py  test_planner_structured.py  test_profile_computed.py  test_search.py  test_velocity.py
