[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "context-bridge"
version = "0.2.0"
description = "Persistent memory for Claude Code — checkpoint-based replanning across sessions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["claude-code", "memory", "context", "ai-agents", "checkpoint", "replanning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    "anthropic>=0.30",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx"]

[project.urls]
Homepage = "https://github.com/pushkalkumar/context-bridge"
Issues = "https://github.com/pushkalkumar/context-bridge/issues"

[project.scripts]
context-bridge = "server.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.setuptools.package-data]
server = ["dashboard.html", "skill.md", "hook.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
