[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name: "context-bridge" on PyPI is an unrelated RAG package.
# The CLI command and repo name remain "context-bridge".
name = "claude-context-bridge"
version = "0.5.0"
description = "Stagnation detection, velocity tracking, and session continuity for Claude Code. Checkpoints every task, detects when you're stuck, and injects the right context at the start of the next session."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["claude-code", "memory", "context", "ai-agents", "checkpoint", "replanning", "stagnation-detection", "velocity-tracking", "session-continuity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    "anthropic>=0.30",
    "httpx",
    "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx"]
semantic = ["voyageai"]

[project.urls]
Homepage = "https://github.com/pushkalkumar/context-bridge"
Issues = "https://github.com/pushkalkumar/context-bridge/issues"

[project.scripts]
context-bridge = "server.main:run"

# `skill` is a data-only namespace package so the canonical skill file
# (skill/CLAUDE.md) ships in the wheel and `context-bridge install` can
# resolve it from site-packages as well as from a repo checkout.
[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "skill*"]
namespaces = true

[tool.setuptools.package-data]
server = ["dashboard.html", "hook.py"]
skill = ["CLAUDE.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
